fixed spacing on items in exp

--- a/src/style/components/_Experience.scss
+++ b/src/style/components/_Experience.scss
@@ -5,6 +5,7 @@
 
     h2 {
       text-align: center;
+      margin-bottom: -5%;
     }
 
     .item_wrapper {
@@ -17,7 +18,7 @@
       }
 
       .item_container {
-        margin-top: 5px;
+        margin: 7% auto;
 
         h3 {
           text-decoration: underline;
